// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`getTokenElement: no children 1`] = `
"<design-tokens>
    <template shadowrootmode="open" shadowrootdelegatesfocus="true">
        <style>
            :host { display: contents; }:host { --blue: blue; }
        </style>
        <slot></slot>
    </template>
</design-tokens>"
`;

exports[`getTokenElement: with children 1`] = `
"<design-tokens>
    <template shadowrootmode="open" shadowrootdelegatesfocus="true">
        <style>
            :host { display: contents; }:host { --blue: blue; }
        </style>
        <slot></slot>
    </template>
    <div>hello world!</div>
</design-tokens>"
`;
